# django-angular-time-log

timelog_backend/: manage.py  pyproject.toml
timelog_backend/timelog/: models.py  serializers.py  urls.py  views.py
timelog_backend/timelog/migrations/: 0001_initial.py
timelog_backend/timelog_backend/: asgi.py  settings.py  urls.py  wsgi.py
timelog_frontend/: README.md  angular.json  package-lock.json  package.json
timelog_frontend/src/: index.html
timelog_frontend/src/app/: app.component.spec.ts  app.component.ts
